# rust-paint

./: Cargo.toml
src/: main.rs  paint_area.rs
src/paint/: mod.rs  paint_area.rs  paint_window.rs
src/support/: id.rs  mod.rs
